# mini-DB-net

./: CMakeLists.txt  README.md
zgdbServer/: CMakeLists.txt  README.md  main.c
zgdbServer/lib/mman-win32/: mman.c
zgdbServer/tests/: example.c  finalTest.c
zgdbServer/tests/depth/: depthtest.c
zgdbServer/tests/expand/: expandtest.c
zgdbServer/tests/fileload/: fileloadtest.c
zgdbServer/tests/filter/: filtertest.c
zgdbServer/tests/fixdelete/: fixdeletetest.c
zgdbServer/tests/freelist/: freelisttest.c  loadtest.c
zgdbServer/tests/index/: createmanyindexes.c  indexcreatetest.c  readindex.c
zgdbServer/tests/iterator/: iteratortest.c
zgdbServer/tests/join/: jointest.c
zgdbServer/tests/mmap/: mmaptest.c
zgdbServer/tests/root/: rootdoctest.c
zgdbServer/tests/toast/: toasttest.c
zgdbServer/tests/tree/: createdoc.c  deletetest.c  deletetest2.c  iteratortest.c  manualattach.c
zgdbServer/xml/: zgdbXmlRequest.c  zgdbXmlRequest.h
zgdbServer/zgdb/: zgdb.c  zgdb.h
zgdbServer/zgdb/data/: zgdbdata.c  zgdbdata.h
zgdbServer/zgdb/data/filter/: zgdbfilter.c  zgdbfilter.h
zgdbServer/zgdb/data/iterator/: dociterator.c  dociterator.h  eliterator.c  eliterator.h
zgdbServer/zgdb/data/result/: elresultlist.c  elresultlist.h  resultlist.c  resultlist.h
zgdbServer/zgdb/data/treestack/: treestack.c  treestack.h
zgdbServer/zgdb/format/: zgdbfile.c  zgdbfile.h
zgdbServer/zgdb/index/: zgdbindex.c  zgdbindex.h
zgdbServer/zgdb/index/list/: freelist.c  freelist.h
zgdbServer/zgdb/schema/: zgdbschema.c  zgdbschema.h
zpathClient/: CMakeLists.txt  input  main.c  (+4 more)
